--- a/level6/views/login.ejs
+++ b/level6/views/login.ejs
@@ -17,6 +17,17 @@
                 <input type="checkbox" checked="checked" name="remember"> Remember me
             </label>
             <!-- <button type="button" class="cancelbtn">Cancel</button> -->
+
+            <div class="col-sm-4">
+                <div class="card">
+                  <div class="card-body">
+                    <a class="btn btn-block btn-social btn-google" href="/auth/google" role="button">
+                      <i class="fab fa-google"></i>
+                      Sign In with Google
+                    </a>
+                  </div>
+                </div>
+              </div>
         </div>
     </form>
 </div>
